--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <br><br><br><br><br><br>
 
-      <p class="short-bio">insert text here</p>
+      <p class="short-bio">gaming™ extraordinaire</p>
 
     
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -115,7 +115,7 @@
 
 
 
-      <div class="push flexy" class="footerdiv">
+      <div class=" push flexy" class="footerdiv" style="margin-bottom: 0.35rem;">
         <img src="../assets/doecoin-downscale.png" class="doecoin disable" id="doecoin">
         <span class="footer-text doecointext">We also support<br>Doegecoin!</span>
       </div>
@@ -145,3 +145,24 @@
 
 
 </html>
+
+<!--
+  
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+mDMEYqKrtBYJKwYBBAHaRw8BAQdAb+vK+0zvLzp2W8dAGOZ4emP5zH1O+kbKS9dW
+aF5v9I+0HW1tbW0gPGRhcHVnZ2FtaW5nMkBnbWFpbC5jb20+iJoEExYKAEIWIQQH
+ZRta3OTESEarjRD61YRgxNy6+AUCYqKrtAIbAwUJA8NP/AULCQgHAgMiAgEGFQoJ
+CAsCBBYCAwECHgcCF4AACgkQ+tWEYMTcuvg15gD7BL5Dm81ALOhIklUpmYst96P/
+cA8e6rXXE3rYqZIztU0BAO4oSBKDNA4hWixtYEj5J2wuPcN/Bg6mSWj6v4ZoO5oO
+uDgEYqKrtBIKKwYBBAGXVQEFAQEHQHe84Rx9+RsedRPWJNOLBYfNBOg9ZkLrhF2C
+WD6NRWx2AwEIB4h+BBgWCgAmFiEEB2UbWtzkxEhGq40Q+tWEYMTcuvgFAmKiq7QC
+GwwFCQPDT/wACgkQ+tWEYMTcuvgYAQEAvUIuhDbRYI8t2jY6dD1IbIDtYEu9px6B
+/nGSsJ6B6DYBAOFtaLRRE/jC0FcDXAXyzP/4UnEXPjMdnVZmvEdjuykN
+=Jh3s
+-----END PGP PUBLIC KEY BLOCK-----
+
+
+there is nothing hidden within this website or its code.
+
+-->
